--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,41 @@
+@font-face {
+	font-family: 'mont';
+	font-weight: 400;
+	src: url(../fonts/Montserrat-SemiBold.ttf);
+}
+@font-face {
+	font-family: 'mont';
+	font-weight: 700;
+	src: url(../fonts/Montserrat-Bold.ttf);
+}
 body {
 	background-color: #e8eaf6;
 	background-image: url('../imgs/bg.jpg');
 	background-position: top center;
 	background-size: cover;
 	min-height: 100vh;
-	font-family: 'Manrope', sans-serif;
+	font-family: 'mont', sans-serif;
 	display: flex;
 	align-items: center;
 	overflow-x: hidden;
 }
 .logo {
 	max-width: 100%;
-	max-height: 70px;
+	max-height: 150px;
 	display: block;
 	margin: auto;
+	margin-bottom: 30px;
+}
+.title {
 	margin-bottom: 50px;
+	font-size: 2.75rem;
+	/* color: #e64924; */
+	color: #002868;
+}
+@media (max-width: 575px) {
+	.title {
+		font-size: 1.8rem;
+	}
 }
 .section-col {
 	background-color: rgb(255 255 255 / .7);
@@ -42,14 +63,14 @@ body {
 }
 .btn-igs {
 	--bs-btn-color: #fff;
-	--bs-btn-bg: #002868;
-	--bs-btn-border-color: #002868;
+	--bs-btn-bg: #e64924;
+	--bs-btn-border-color: #e64924;
 	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg:  #031a40;
-	--bs-btn-hover-border-color: #031a40;
+	--bs-btn-hover-bg:  #c53211;
+	--bs-btn-hover-border-color: #c53211;
 	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #031a40;
-	--bs-btn-active-border-color: #031a40;
+	--bs-btn-active-bg: #c53211;
+	--bs-btn-active-border-color: #c53211;
 	--bs-btn-disabled-color: #fff;
 	--bs-btn-disabled-bg: #6c6c6c;
 	--bs-btn-disabled-border-color: #6c6c6c;
